--- a/style_doc_proyect.css
+++ b/style_doc_proyect.css
@@ -1,5 +1,5 @@
 
-li {background-color: #FFD4D0;}
+.pink_bg {background-color: #FFD4D0;}
 html {
         font-family: 'Tahoma', 'sans-serif';
         font-size: 100%;
