--- a/style_doc_proyect.css
+++ b/style_doc_proyect.css
@@ -1,5 +1,11 @@
 
-.pink_bg {background-color: #FFD4D0;}
+.pink_bg {
+        background-color: #FFD4D0;
+}
+.bl_bg {
+        background-color: #1F1F1F;
+        color: white;
+}
 html {
         font-family: 'Tahoma', 'sans-serif';
         font-size: 100%;
@@ -15,9 +21,7 @@ h2 {
         font-family: 'Tahoma', sans-serif;
         font-weight: normal;
     }
-.colorred {
-             color: red;
-     }
+
 h4 {
         font-size: 40px;
         font-family: 'Tahoma', sans-serif;
