--- a/style_doc_proyect.css
+++ b/style_doc_proyect.css
@@ -1,11 +1,4 @@
 
-.pink_bg {
-        background-color: #FFD4D0;
-}
-.bl_bg {
-        background-color: #1F1F1F;
-        color: white;
-}
 html {
         font-family: 'Tahoma', 'sans-serif';
         font-size: 100%;
@@ -26,12 +19,15 @@ h2 {
      }
 .color_bg_pink {
     background-color: #FFD4D0;
-    1F1F1F
 }
 .color_bg_black {
     background-color: #1F1F1F;
     color: whitesmoke;
 }
+.pink_letters {
+      color: #FFD4D0;
+      font-weight: semi-bold;
+    }
 h4 {
         font-size: 40px;
         font-family: 'Tahoma', sans-serif;
