--- a/style_doc_proyect.css
+++ b/style_doc_proyect.css
@@ -14,22 +14,28 @@ h2 {
         font-family: 'Tahoma', sans-serif;
         font-weight: normal;
     }
-.colorred {
+.color__red {
              color: red;
      }
-.color_bg_pink {
+.color__bg__pink {
     background-color: #FFD4D0;
 }
-.color_bg_black {
+.color__bg__black {
     background-color: #1F1F1F;
     color: whitesmoke;
 }
-.pink_letters {
+.pink__letters {
       color: #FFD4D0;
       font-weight: semi-bold;
     }
-h4 {
-        font-size: 40px;
-        font-family: 'Tahoma', sans-serif;
-        font-weight: bold;
-     }
+.portfolio__imgs {
+    display: grid;
+    width: 33%;
+    display: block;
+    padding: 20px;
+}
+
+progress [value]{
+        color: black;
+        background: lightslategray; 
+}
