--- a/style_doc_proyect.css
+++ b/style_doc_proyect.css
@@ -2,16 +2,17 @@
 html {
         font-family: 'Tahoma', 'sans-serif';
         font-size: 100%;
+        font-weight: normal;
+        color: hsl(0,0,12%);
+        line-height: 1.5;
     }
 h1 {
         font-size: 20px;
-        font-family: 'Tahoma', sans-serif;
         font-weight: bold;
         color: #333;
      }
 h2 {
         font-size: 32px;
-        font-family: 'Tahoma', sans-serif;
         font-weight: normal;
     }
 .color__red {
@@ -30,9 +31,8 @@ h2 {
     }
 .portfolio__imgs {
     display: grid;
-    width: 33%;
-    display: inline-block;
-    padding: 20px;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 20px;
 }
 
 progress [value]{
