--- a/style_doc_proyect.css
+++ b/style_doc_proyect.css
@@ -15,15 +15,36 @@ h2 {
         font-size: 32px;
         font-weight: normal;
     }
-.color__red {
+.topbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 8px 12px;
+}
+.topbar__logo img{
+    max-width: 180px;
+}
+.topbar_nav{
+    background-color: black;
+    color:whitesmoke;
+    flex:1;
+    padding:0;
+    margin-bottom:0;
+}
+ a:visited{
+    color:purple;
+ }
+.font__color__red {
              color: red;
      }
-.color__bg__pink {
+.font__color__whitesmoke {
+    color: whitesmoke;
+}
+.bg__color_pink {
     background-color: #FFD4D0;
 }
-.color__bg__black {
+.bg__color_black {
     background-color: #1F1F1F;
-    color: whitesmoke;
 }
 .pink__letters {
       color: #FFD4D0;
