--- a/style_doc_proyect.css
+++ b/style_doc_proyect.css
@@ -34,6 +34,37 @@ h2 {
  a:visited{
     color:purple;
  }
+.centered__section{
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+ }
+ .centered__section table {
+    margin-left: auto;
+  margin-right: auto;
+ }
+.footer__padding {
+    padding-top: 10px;
+    padding-bottom: 45px;
+}
+.padding__aboutme {
+    border-spacing: 400px 0px;
+    margin-left: auto;
+    margin-right: auto;
+}
+.padding__services {
+    border-spacing: 30px 0px;
+    margin-left: auto;
+    margin-right: auto;
+}
+.padding__designskills {
+    border-spacing: 50px 4px;
+    text-align: justify;
+}
+.fontsize__emphasis{
+    font-size: 52px;
+    font-weight: bolder;
+}
 .font__color__red {
              color: red;
      }
