--- a/style_doc_proyect.css
+++ b/style_doc_proyect.css
@@ -1,93 +1,138 @@
 
 html {
-        font-family: 'Tahoma', 'sans-serif';
-        font-size: 100%;
-        font-weight: normal;
-        color: hsl(0,0,12%);
-        line-height: 1.5;
-    }
+    font-family: 'Tahoma', 'sans-serif';
+    font-size: 100%;
+    font-weight: normal;
+    color: hsl(0,0,12%);
+    line-height: 1.5;
+}
 h1 {
-        font-size: 20px;
-        font-weight: bold;
-        color: #333;
-     }
+    font-size: 20px;
+    font-weight: bold;
+    color: #333;
+ }
 h2 {
-        font-size: 32px;
-        font-weight: normal;
-    }
+    font-size: 32px;
+    font-weight: normal;
+}
+.square {
+    width: 200px;
+    height: 200px;
+  }
+  .color-bg-red {
+    background-color: red;
+  }
+  .circled {
+    border-radius: 50%;
+    box-shadow: 0 0 0 1px white;
+    z-index: 1;
+  }
+  .absolute {
+    position: absolute;
+    inset: -10px auto auto -10px;
+}
 .topbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 8px 12px;
+display: flex;
+justify-content: space-between;
+align-items: center;
+padding: 8px 12px;
 }
 .topbar__logo img{
-    max-width: 180px;
+max-width: 180px;
 }
 .topbar_nav{
-    background-color: black;
-    color:whitesmoke;
-    flex:1;
-    padding:0;
-    margin-bottom:0;
+background-color: black;
+color:whitesmoke;
+flex:1;
+padding:0;
+margin-bottom:0;
 }
- a:visited{
-    color:purple;
- }
+.topbar__padding{
+padding-right: 40px;
+}
+a:visited{
+color:purple;
+}
 .centered__section{
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
- }
- .centered__section table {
-    margin-left: auto;
-  margin-right: auto;
- }
+margin-left: auto;
+margin-right: auto;
+text-align: center;
+}
+.centered__section table {
+margin-left: auto;
+margin-right: auto;
+}
 .footer__padding {
-    padding-top: 10px;
-    padding-bottom: 45px;
+padding-top: 10px;
+padding-bottom: 45px;
 }
 .padding__aboutme {
-    border-spacing: 400px 0px;
-    margin-left: auto;
-    margin-right: auto;
+border-spacing: 200px 40px;
+margin-left: auto;
+margin-right: auto;
 }
 .padding__services {
-    border-spacing: 30px 0px;
-    margin-left: auto;
-    margin-right: auto;
+border-spacing: 30px 0px;
+margin-left: auto;
+margin-right: auto;
 }
 .padding__designskills {
-    border-spacing: 50px 4px;
-    text-align: justify;
+border-spacing: 50px 4px;
+text-align: justify;
 }
 .fontsize__emphasis{
-    font-size: 52px;
-    font-weight: bolder;
+font-size: 52px;
+margin-bottom: auto;
+margin-top: auto;
+font-weight: bolder;
+}
+.font__weight__bold {
+font-weight: bold;
 }
 .font__color__red {
-             color: red;
-     }
+         color: red;
+ }
 .font__color__whitesmoke {
-    color: whitesmoke;
+color: whitesmoke;
 }
 .bg__color_pink {
-    background-color: #FFD4D0;
+background-color: #FFD4D0;
 }
 .bg__color_black {
-    background-color: #1F1F1F;
+background-color: #1F1F1F;
 }
 .pink__letters {
-      color: #FFD4D0;
-      font-weight: semi-bold;
-    }
+  color: #FFD4D0;
+  font-weight: semi-bold;
+}
 .portfolio__imgs {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 20px;
+display: grid;
+grid-template-columns: repeat(3, 1fr);
+grid-gap: 20px;
+}
+.color-bg-mix
+{    background: #FFD4D0;     
+background: linear-gradient(180deg, #FFD4D0 34%, rgba(255,255,255,1) 34%); 
 }
 
+.grid__two_columns {
+display: grid;
+grid-template-columns: 50%,50%;
+grid-gap: 200px;
+}
+.container__get_in_touch {
+width: 700px;
+padding: 10px;
+justify-content: space-between;
+align-content: space-between;
+}
+#icons {
+display: inline-block;
+align-items: center;
+}
+
+
 progress [value]{
-        color: black;
-        background: lightslategray; 
+    color: black;
+    background: lightslategray; 
 }
